# bsim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: INSTALL.md
shaders/: shader.fs
src/: main.cpp
src/Animation/: Animation.cpp  Animation.h  Axes.cpp  Axes.h  AxesImGuiHandle.h  BoundingBox.cpp  BoundingBox.h  BoundingBoxImGuiHandle.h  CMakeLists.txt  Grid.cpp  Grid.h  GridImGuiHandle.h  ImGuiHandler.cpp  ImGuiHandler.h  ImGuiStream.h  PointCloud.cpp  PointCloud.h  PointCloudImGuiHandle.h  Shader.cpp  Shader.h
src/Animation/shaders/: shader.vs
src/CmdLineParser/: CMakeLists.txt
src/ConfigParser/: CMakeLists.txt
src/PAPI/: CMakeLists.txt  Papi.cpp  Papi.h
src/Parameters/: .SimulationParameters.h.swp  AgentClassParameters.cpp  AgentClassParameters.h  AgentClassParametersImGuiHandle.h  AnimationParameters.cpp  AnimationParameters.h  AnimationParametersImGuiHandle.h  CMakeLists.txt  Color.h  GlobalParameters.cpp  GlobalParameters.h  GlobalParametersImGuiHandle.h  SimulationParameters.cpp  SimulationParameters.h  SimulationParametersImGuiHandle.h
src/Simulation/: CMakeLists.txt  Results.cpp  Results.h  Simulation.cpp  Simulation.h  SimulationImGuiHandle.h  StateMachine.cpp  StateMachine.h
src/State/: .Agent.cpp.swp  .AgentClass.cpp.swp  .AgentClass.h.swp  .AgentMetrics.cpp.swp  Agent.cpp  Agent.h  AgentClass.cpp  AgentClass.h  AgentMetrics.cpp  AgentMetrics.h  BrownianSearch.cpp  BrownianSearch.h  CMakeLists.txt  LevySearch.cpp  LevySearch.h  Point3D.h  Search.cpp  Search.h  State.cpp  State.h  SystemMetrics.cpp  SystemMetrics.h  asa241.cpp  asa241.hpp
src/Utils/: CMakeLists.txt  helpers.h
src/examples/: .animation.toml.swp  .bsim_animation_default.conf.swp  .bsim_large_swarms.conf.swp  .bsim_medium_swarm.conf.swp  .bsim_simulation_default.conf.swp  animation.toml  setenv.sh  simulation.toml
src/glad/: CMakeLists.txt  gl.c  gl.h
src/imgui/: CMakeLists.txt
src/imgui/freetype/config/: ftoption.h
